--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html{
     width: 100%;
     height: 100%;
+    scroll-behavior: smooth;
 }
 *{
     margin: 0;
@@ -12,6 +13,8 @@ body{
     background-color: rgb(218, 230, 240);
     min-height: 100vh;
     overflow-x: hidden;
+    scroll-behavior: smooth;
+
 }
 .tela{
     display: flex;
@@ -39,9 +42,14 @@ body{
 
 #areaDoJogo{
     border-radius: 10px;
-    width: 90%;
-    height: 50vh;
+    width: 80%;
+    height: 60vh;
     background-color: rgb(143, 89, 179);
+    background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
     margin: 1em;
     margin-left: auto;
     margin-right: auto;
