--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,11 @@ header {
     padding: 10px 40px;
     background-color: var(--corFundoHeader);
 }
+hr{
+    margin: 0;
+}
+
 .iconSvg{
-    /* filter: brightness(0) saturate(100%) */
     filter: var(--filtroSvg);
 }
 
@@ -48,6 +51,12 @@ header {
 }
 
 .tela > div {
+    justify-content: center;
+}
+
+#divBtnPrincipal{
+    gap: 40px;
+    display: flex;
     justify-content: center;
 }
 
@@ -75,8 +84,6 @@ header {
     background-position: center;
     background-attachment: fixed;
     margin: 1em auto;
-    /* rgba(29, 28, 28, 0.664) */
-    /* filter: drop-shadow(0px 10px 15px 5px var(--corFonte)); */
     box-shadow: 0px 5px 15px 0px rgba(102, 102, 102, 0.5);
 }
 
@@ -88,6 +95,7 @@ header {
     width: 5vh;
     height: 5vh;
     clip-path: circle(50%);
+    transition: ease-out 0.05s;
 }
 
 #bolinha img {
@@ -174,4 +182,16 @@ input:focus + .slider {
 
 input:checked + .slider:before {
     transform: translateX(1.9em);
+}
+
+@media (max-width: 600px) {
+    header{
+        padding: 10px 20px;
+    }
+    #divBtnPrincipal{
+        gap: 20px;
+    }
+    #areaDoJogo{
+        width: 90%;
+    }
 }
