--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,13 @@
 :root{
     /* claro - rgb(218, 230, 240) || escuro2 - rgb(34 47 55)*/
-    --corFundo: rgb(34 47 55);
+    --corFundo: #21315B;
     /* claro -  rgb(179, 195, 207) || escuro2 - rgb(29, 36, 43) */
     --corFundoHeader:  rgb(29, 36, 43);
     /* claro - rgb(0,0,0) || escuro - rgb(255,255,255)  */
     --corFonte: rgb(255,255,255);
     /* claro - brightness(0) saturate(100%) || escuro - brightness(0) invert(100%) contrast(100%)*/
-    --filtroSvg: brightness(0) saturate(100%);
-    
+    --filtroSvg: brightness(0) invert(100%) contrast(100%);
+    --textShadow: 0px 0px 5px rgb(161, 161, 161);
 }
 
 html,
@@ -21,7 +21,10 @@ body {
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: var(--corFundo);
+    background: url(../imagem/background.png) var(--corFundo);
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     color: var(--corFonte);
     min-height: 100vh;
     overflow-x: hidden;
@@ -35,25 +38,42 @@ header {
     padding: 10px 40px;
     background-color: var(--corFundoHeader);
 }
-hr{
+hr, br{
     margin: 0;
+    user-select: none;
 }
 
 .iconSvg{
     filter: var(--filtroSvg);
+    transition: 0.3s ease-in-out;
+}
+.iconSvg:hover{
+    scale: 1.2;
+    rotate: 12deg;
 }
 
 
 
 .tela {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    background-color: #21315bd7;
+    width: fit-content;
+    padding: 10px 50px;
+    margin: 0 auto;
 }
 
 .tela > div {
     justify-content: center;
+}
+
+.tela h2,
+.tela h4{
+    margin: 5px 0px;
+    text-shadow: var(--textShadow);
 }
 
 #divBtnPrincipal{
@@ -70,6 +90,7 @@ hr{
     color: aliceblue;
     background-color: rgb(26, 35, 66);
     transition: 0.4s;
+    user-select: none;
 }
 
 .botao:hover {
@@ -79,8 +100,8 @@ hr{
 
 #areaDoJogo {
     border-radius: 10px;
-    width: 80%;
-    height: 60vh;
+    min-width: 80vw;
+    height: 70vh;
     background-color: rgb(124, 66, 163);
     background-repeat: no-repeat;
     background-size: cover;
@@ -139,59 +160,8 @@ hr{
     width: fit-content;
 }
 
-.switch {
-    --secondary-container: #4a4a4a;
-    --primary: #d6d6d6;
-    font-size: 17px;
-    position: relative;
-    display: inline-block;
-    width: 3.7em;
-    height: 1.8em;
-}
 
-.switch input {
-    display: none;
-}
 
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #313033;
-    transition: .2s;
-    border-radius: 30px;
-}
-
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 1.4em;
-    width: 1.4em;
-    border-radius: 20px;
-    left: 0.2em;
-    bottom: 0.2em;
-    background-color: #aeaaae;
-    transition: .4s;
-}
-
-input:checked + .slider::before {
-    background-color: var(--primary);
-}
-
-input:checked + .slider {
-    background-color: var(--secondary-container);
-}
-
-input:focus + .slider {
-    box-shadow: 0 0 1px var(--secondary-container);
-}
-
-input:checked + .slider:before {
-    transform: translateX(1.9em);
-}
 
 @media (max-width: 600px) {
     header{
