--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,6 +170,25 @@ hr, br{
     width: fit-content;
 }
 
+footer{
+    text-align: center;
+    box-sizing: border-box;
+    margin-top: 100px;
+    padding: 30px 0px;
+    width: 100%;
+    background-color: rgba(29, 36, 43, 0.801);
+    backdrop-filter: blur(5px);
+    border-top: 1px solid white;
+}
+footer a{
+    color: rgb(204, 204, 219);
+    transition: 0.3s;
+}
+footer a:hover{
+    color: rgb(119, 119, 165);
+    
+}
+
 
 
 @media (max-width: 600px) {
